@@ -2,6 +2,14 @@
 MOAT test scripts
 John Jacobsen jacobsen@npxdesigns.com
 
+V00-02-08 3/9/10
+0003855: Rip out BFD cruft from tagmoat script
+0003854: MOAT/stagedtests.pl vulnerable to false alarm if DOR clock ends in the hex digits "bad"
+0002004: sudo make rpm fails
+
+============================================================================
+
+
 V00-02-07  11/13/07
  Issue    Fix/upgrade
 0001738: comms tests (MOAT, QUADTOOL, DMT, DOMAPPTEST.py) all need to have the ability to run in the foreground
